fixed cors bug